Announcement layout Update

--- a/addanouncement.html
+++ b/addanouncement.html
@@ -832,23 +832,28 @@
 														</div>
 													</div> 				
 													<div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <label class="form-label">Announcement Layout</label>
-                                                        <select class="form-control" name="validation-select">
-                                                            <option value>Select Layout</option>
-															<option value="pitons">Mahanagar Layout</option>
-                                                                <option value="cams">Sajha Yatayat Layout</option>
-                                                                <option value="nuts">Nagarik Yatayat Layout</option>
-                                                                <option value="bolts">NSRR Layout</option>                                                            
-                                                        </select>
-                                                    </div>
-                                                </div>        
-													<div class="col-md-12">
-														<div class="mb-3">
-															<label for="demo-input-file" class="form-label">Announcement Audio</label>
-															<input class="form-control" type="file" id="demo-input-file">
+														<div class="form-group">
+															<label class="form-label">Announcement Layout</label>
+															<select class="form-control" name="validation-select">
+																<option value>Select Layout</option>
+																<option value="pitons">Mahanagar Layout</option>
+																	<option value="cams">Sajha Yatayat Layout</option>
+																	<option value="nuts">Nagarik Yatayat Layout</option>
+																	<option value="bolts">NSRR Layout</option>                                                            
+															</select>
 														</div>
-													</div>										
+													</div> 
+													<div class="col-md-6">
+														<div class="form-group">
+															<label class="form-label">Route</label>
+															<select class="form-control" name="validation-select">
+																<option value>Select Route</option>
+																<option value="pitons">Ringroad 1</option>
+																	<option value="cams">Sajha Route 1</option>
+																	<option value="nuts">Sajha Route 2</option>																	                                                        
+															</select>
+														</div>
+													</div> 																		
 												</div>
 												<button type="submit" class="btn btn-primary">Submit</button>
 												<button class="btn btn-danger">Cancel</button>											
