--- a/addanouncementlayout.html
+++ b/addanouncementlayout.html
@@ -856,6 +856,18 @@
 														<label for="demo-input-file" class="form-label">Bus Animation</label>
 														<input class="form-control" type="file" id="demo-input-file">
 													</div>
+												</div>
+												<div class="col-md-6">
+													<div class="mb-3">
+														<label for="demo-input-file" class="form-label">Current Station (Example: Ahile.m4a)</label>
+														<input class="form-control" type="file" id="demo-input-file">
+													</div>
+												</div>		
+												<div class="col-md-6">
+													<div class="mb-3">
+														<label for="demo-input-file" class="form-label">Next Station (Example: Yespachi.m4a)</label>
+														<input class="form-control" type="file" id="demo-input-file">
+													</div>
 												</div>				                                                                            
                                             </div>
 											<button type="submit" class="btn btn-primary">Submit</button>
