--- a/viewroutes.html
+++ b/viewroutes.html
@@ -856,7 +856,9 @@
 																	for="customswitchv1-1">isActive</label>
 															</div>
 														</td>
-                                                        <td><a href="" type="button" class="btn-sm btn-info" 
+                                                        <td><a href="" type="button" class="btn-sm btn-success" 
+																data-bs-toggle="tooltip">Map View</a>
+															<a href="" type="button" class="btn-sm btn-info" 
 																data-bs-toggle="tooltip">Edit</a>
 															<a href="" type="button" class="btn-sm btn-danger" 
 																data-bs-toggle="tooltip">Delete</a>
@@ -879,7 +881,9 @@
 																	for="customswitchv1-1">isActive</label>
 															</div>
 														</td>
-                                                        <td><a href="" type="button" class="btn-sm btn-info" 
+                                                        <td><a href="" type="button" class="btn-sm btn-success" 
+																data-bs-toggle="tooltip">Map View</a>
+															<a href="" type="button" class="btn-sm btn-info" 
 																data-bs-toggle="tooltip">Edit</a>
 															<a href="" type="button" class="btn-sm btn-danger" 
 																data-bs-toggle="tooltip">Delete</a>
@@ -902,7 +906,9 @@
 																	for="customswitchv1-1">isActive</label>
 															</div>
 														</td>
-                                                        <td><a href="" type="button" class="btn-sm btn-info" 
+                                                        <td><a href="" type="button" class="btn-sm btn-success" 
+																data-bs-toggle="tooltip">Map View</a>
+															<a href="" type="button" class="btn-sm btn-info" 
 																data-bs-toggle="tooltip">Edit</a>
 															<a href="" type="button" class="btn-sm btn-danger" 
 																data-bs-toggle="tooltip">Delete</a>
