--- a/addsnippet.html
+++ b/addsnippet.html
@@ -839,7 +839,7 @@
                                 <div class="card col-xl-12 col-sm-12">
                                     <div class="card-header">
                                         <h5>Add Snippet (After Video Advertisement)</h5>
-										<p><small class="text-muted">Snippet add is played after videos or announcement. Duration or length of snippet ads must be 3 Second.</small></p>
+										<p><small class="text-muted">Snippet add is played before & after videos. Duration or length of snippet ads must be 3 Second.</small></p>
                                     </div>
                                     <div class="row card-body col-xl-12 col-sm-12">
                                         <div class=" col-xl-12">
@@ -963,7 +963,7 @@
 												<div class="col-md-6">
 													<div class="card">
 														<div class="card-header">
-															<h5 class="card-title">Set Ads Repetition</h5>
+															<h5 class="card-title">Ads allocation</h5>
 														</div>
 														<div class="card-body">
 															<div class="row">
@@ -972,37 +972,16 @@
 																		<div class="form-check form-check-inline">
 																			<input class="form-check-input input-primary" type="radio"
 																				name="group5" value="" id="customCheckinlh1">
-																			<label class="form-check-label" for="customCheckinlh1"> 10 Min
+																			<label class="form-check-label" for="customCheckinlh1"> Before
 																			</label>
 																		</div><div class="form-check form-check-inline">
 																			<input class="form-check-input input-primary" type="radio"
 																				name="group5" value="" id="customCheckinlh1">
-																			<label class="form-check-label" for="customCheckinlh1"> 15 Min
+																			<label class="form-check-label" for="customCheckinlh1"> After
 																			</label>
-																		</div>
-																		<div class="form-check form-check-inline">
-																			<input class="form-check-input input-primary" type="radio"
-																				name="group5" value="" id="customCheckinlh2">
-																			<label class="form-check-label" for="customCheckinlh2"> 30 Min
-																			</label>
-																		</div>
-																		<div class="form-check form-check-inline">
-																			<input class="form-check-input input-primary" type="radio"
-																				name="group5" value="" id="customCheckinlh2">
-																			<label class="form-check-label" for="customCheckinlh2"> 60 Min
-																			</label>
-																		</div>    
+																		</div>																		
 																	</div>
-																</div> 
-																<div class="col-md-8">
-																	<div class="form-group">
-																		<input class="form-check-input input-primary" type="radio"
-																						name="group5" value="" id="customCheckinlh2">
-																		<label class="form-label">Custom Repetitions per Hour</label>
-																		<input type="text" class="form-control" name="validation-email"
-																			placeholder="Enter No of Repeat Times in Hour">
-																	</div>
-																</div>                                                 
+																</div> 																                             
 															</div> 
 														</div>
 													</div>													
