--- a/viewannouncementlayouts.html
+++ b/viewannouncementlayouts.html
@@ -817,19 +817,21 @@
 						<!-- [ Main Content ] start -->
 						<div class="row">							
 							  <!-- [ stiped-table ] start -->
-                            <div class="col-xl-6">
+                            <div class="col-xl-12 col-md-12">
                                 <div class="card">
                                     <div class="card-header">
                                         <h5>Announcement Layout</h5>
                                         
                                     </div>
-                                    <div class="card-body table-border-style">
+                                    <div class="card-body table-border-style col-md-12">
                                         <div class="table-responsive">
                                             <table class="table table-striped">
                                                 <thead>
                                                     <tr>
                                                         <th>SN No</th>
                                                         <th>Announcement Layout</th>
+                                                        <th>Current Station Audio</th>
+                                                        <th>Next Station Audio</th>
                                                         <th>Action</th>                                                       
                                                     </tr>
                                                 </thead>
@@ -837,6 +839,10 @@
                                                     <tr>
                                                         <td>1</td>
                                                         <td>Sajha Layout</td>
+                                                        <td><a type="button" class="btn btn-rounded btn-outline-warning" title="Content List"><i
+																class="feather icon-play"></i>Preview</a></td>
+                                                        <td><a type="button" class="btn btn-rounded btn-outline-warning" title="Content List"><i
+																class="feather icon-play"></i>Preview</a></td>
                                                         <td>
 															<a href="" type="button" class="btn-sm btn-info" 
 																data-bs-toggle="tooltip">Edit</a>
@@ -847,6 +853,10 @@
                                                     <tr>
                                                         <td>2</td>
                                                         <td>Mahanagar Layout</td>
+                                                        <td><a type="button" class="btn btn-rounded btn-outline-warning" title="Content List"><i
+																class="feather icon-play"></i>Preview</a></td>
+                                                        <td><a type="button" class="btn btn-rounded btn-outline-warning" title="Content List"><i
+																class="feather icon-play"></i>Preview</a></td>
                                                         <td>
 															<a href="" type="button" class="btn-sm btn-info" 
 																data-bs-toggle="tooltip">Edit</a>
@@ -857,6 +867,10 @@
                                                     <tr>
                                                         <td>3</td>
                                                         <td>Mahasagar Layout</td>
+                                                        <td><a type="button" class="btn btn-rounded btn-outline-warning" title="Content List"><i
+																class="feather icon-play"></i>Preview</a></td>
+                                                        <td><a type="button" class="btn btn-rounded btn-outline-warning" title="Content List"><i
+																class="feather icon-play"></i>Preview</a></td>
 														<td>
 															<a href="" type="button" class="btn-sm btn-info" 
 																data-bs-toggle="tooltip">Edit</a>
