--- a/viewannouncementads.html
+++ b/viewannouncementads.html
@@ -808,7 +808,7 @@
 										<ul class="breadcrumb">
 											<li class="breadcrumb-item"><a href="index.html"><i
 														class="feather icon-home"></i></a></li>
-											<li class="breadcrumb-item"><a href="#!">View Snippets</a></li>
+											<li class="breadcrumb-item"><a href="#!">View Announcement Ads</a></li>
 										</ul>
 									</div>
 								</div>
@@ -821,7 +821,7 @@
                             <div class="col-xl-12">
                                 <div class="card">
                                     <div class="card-header">
-                                        <h5>Snippets</h5>
+                                        <h5>Announcement Ads</h5>
                                         
                                     </div>
                                     <div class="card-body table-border-style">
@@ -834,9 +834,8 @@
 														<th>Preview</th>
 														<th>Client</th>
 														<th>Status</th>
-														<th>Expiry Date</th>
-														<th>Ad Repetition</th>
-														<th>No of Buses</th>
+														<th>Expiry Date</th>														
+														<th>Routes</th>
                                                         <th>Active</th>
                                                         <th>Action</th>                                                       
                                                     </tr>
@@ -855,9 +854,8 @@
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-warning" title="Content List"><i
 																class="feather icon-layers"></i></a>
 														</td>										
-														<td>7/20/2024</td>
-                                                        <td>15 Min</td>
-														<td>Sajha Route 1 (10 Buses)<br>Sajha Route 2 (5 Buses)</td>
+														<td>7/20/2024</td>                                                        
+														<td>Sajha Route 1<br>Sajha Route 2</td>
                                                         <td>
 															<div class="form-check form-switch mb-2">
 																<input type="checkbox" class="form-check-input input-primary"
@@ -874,7 +872,7 @@
 														</td>                                          
                                                     </tr>
                                                     <tr>
-                                                        <td>1</td>
+                                                        <td>2</td>
                                                         <td>Daraz 11:11 Ad</td>
                                                         <td><img src="assets/images/slider/img-slide-1.jpg" alt="" width="150px" class="img-fluid">		</td>
                                                         <td>Daraz</td>
@@ -884,9 +882,8 @@
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-warning" title="Content List"><i
 																class="feather icon-layers"></i></a>
 														</td>										
-														<td>6/19/2025</td>
-                                                        <td>10 Min</td>
-														<td>Sajha Route 1 (5 Buses)<br>Ringroad 1 (15 Buses) <br>Sajha Route 4 (5 Buses) </td>
+														<td>6/19/2025</td>                                                        
+														<td>Sajha Route 1<br>Ringroad 1<br>Sajha Route 4</td>
                                                         <td>
 															<div class="form-check form-switch mb-2">
 																<input type="checkbox" class="form-check-input input-primary"
@@ -903,7 +900,7 @@
 														</td>                                          
                                                     </tr>
                                                     <tr>
-                                                        <td>1</td>
+                                                        <td>3</td>
                                                         <td>Ultima 100 Ad</td>
                                                         <td>								
 															<img src="assets/images/slider/img-slide-1.jpg" alt="" width="150px" class="img-fluid">															
@@ -915,9 +912,8 @@
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-warning" title="Content List"><i
 																class="feather icon-layers"></i></a>
 														</td>										
-														<td>9/20/2024</td>
-                                                        <td>30 Min</td>
-														<td>Ringroad 1 (4 Buses)</td>
+														<td>9/20/2024</td>                                                       
+														<td>Ringroad 1</td>
                                                         <td>
 															<div class="form-check form-switch mb-2">
 																<input type="checkbox" class="form-check-input input-primary"
