--- a/viewtimebased.html
+++ b/viewtimebased.html
@@ -808,7 +808,7 @@
 										<ul class="breadcrumb">
 											<li class="breadcrumb-item"><a href="index.html"><i
 														class="feather icon-home"></i></a></li>
-											<li class="breadcrumb-item"><a href="#!">View Snippets</a></li>
+											<li class="breadcrumb-item"><a href="#!">View Timebased Ads</a></li>
 										</ul>
 									</div>
 								</div>
@@ -821,7 +821,7 @@
                             <div class="col-xl-12">
                                 <div class="card">
                                     <div class="card-header">
-                                        <h5>Snippets</h5>
+                                        <h5>Timebased Ads</h5>
                                         
                                     </div>
                                     <div class="card-body table-border-style">
@@ -835,7 +835,7 @@
 														<th>Client</th>
 														<th>Status</th>
 														<th>Expiry Date</th>
-														<th>Ad Repetition</th>
+														<th>Ad Playing  Time</th>
 														<th>No of Buses</th>
                                                         <th>Active</th>
                                                         <th>Action</th>                                                       
@@ -856,7 +856,7 @@
 																class="feather icon-layers"></i></a>
 														</td>										
 														<td>7/20/2024</td>
-                                                        <td>15 Min</td>
+                                                        <td>10:15 AM</td>
 														<td>Sajha Route 1 (10 Buses)<br>Sajha Route 2 (5 Buses)</td>
                                                         <td>
 															<div class="form-check form-switch mb-2">
@@ -885,7 +885,7 @@
 																class="feather icon-layers"></i></a>
 														</td>										
 														<td>6/19/2025</td>
-                                                        <td>10 Min</td>
+                                                        <td>11:11 AM</td>
 														<td>Sajha Route 1 (5 Buses)<br>Ringroad 1 (15 Buses) <br>Sajha Route 4 (5 Buses) </td>
                                                         <td>
 															<div class="form-check form-switch mb-2">
@@ -916,7 +916,7 @@
 																class="feather icon-layers"></i></a>
 														</td>										
 														<td>9/20/2024</td>
-                                                        <td>30 Min</td>
+                                                        <td>03:35 PM</td>
 														<td>Ringroad 1 (4 Buses)</td>
                                                         <td>
 															<div class="form-check form-switch mb-2">
