Small Changes in View Status

--- a/viewbuses.html
+++ b/viewbuses.html
@@ -855,7 +855,7 @@
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-primary" title="Screenshot"><i
 																class="feather icon-camera"></i></a>
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-warning" title="Content List"><i
-																class="feather icon-layers"></i></a>
+																class="feather icon-image"></i></a>
 														</td>
 														 <td>
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-primary" title="Play Log"><i
@@ -897,7 +897,7 @@
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-primary" title="Screenshot"><i
 																class="feather icon-camera"></i></a>
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-warning" title="Content List"><i
-																class="feather icon-layers"></i></a>
+																class="feather icon-image"></i></a>
 														</td>
 														<td>
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-primary" title="Play Log"><i
@@ -938,7 +938,7 @@
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-primary" title="Screenshot"><i
 																class="feather icon-camera"></i></a>
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-warning" title="Content List"><i
-																class="feather icon-layers"></i></a>
+																class="feather icon-image"></i></a>
 														</td>
 														 <td>
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-primary" title="Play Log"><i
