--- a/viewlocationbased.html
+++ b/viewlocationbased.html
@@ -850,10 +850,8 @@
 														</td>
                                                         <td>Coke</td>
                                                         <td>
-															<a type="button" class="btn btn-icon btn-rounded btn-outline-primary" title="Screenshot"><i
-																class="feather icon-camera"></i></a>
-															<a type="button" class="btn btn-icon btn-rounded btn-outline-warning" title="Content List"><i
-																class="feather icon-layers"></i></a>
+															<a type="button" class="btn btn-rounded btn-outline-primary" title="Screenshot"><i
+																class="feather icon-download"></i>Acknowledgement</a>	
 														</td>										
 														<td>7/20/2024</td>
                                                         <td>Sinamangal Oralo</td>
@@ -879,10 +877,8 @@
                                                         <td><img src="assets/images/slider/img-slide-1.jpg" alt="" width="150px" class="img-fluid">		</td>
                                                         <td>Daraz</td>
                                                         <td>
-															<a type="button" class="btn btn-icon btn-rounded btn-outline-primary" title="Screenshot"><i
-																class="feather icon-camera"></i></a>
-															<a type="button" class="btn btn-icon btn-rounded btn-outline-warning" title="Content List"><i
-																class="feather icon-layers"></i></a>
+															<a type="button" class="btn btn-rounded btn-outline-primary" title="Screenshot"><i
+																class="feather icon-download"></i>Acknowledgement</a>	
 														</td>										
 														<td>6/19/2025</td>
                                                         <td>Balkumari Pool</td>
@@ -910,10 +906,8 @@
 														</td>
                                                         <td>Ultima lifestyle</td>
                                                         <td>
-															<a type="button" class="btn btn-icon btn-rounded btn-outline-primary" title="Screenshot"><i
-																class="feather icon-camera"></i></a>
-															<a type="button" class="btn btn-icon btn-rounded btn-outline-warning" title="Content List"><i
-																class="feather icon-layers"></i></a>
+															<a type="button" class="btn btn-rounded btn-outline-primary" title="Screenshot"><i
+																class="feather icon-download"></i>Acknowledgement</a>															
 														</td>										
 														<td>9/20/2024</td>
                                                         <td>Mahadevsthan</td>
