--- a/viewstationfollowup.html
+++ b/viewstationfollowup.html
@@ -851,10 +851,8 @@
 														</td>
                                                         <td>Coke</td>
                                                         <td>
-															<a type="button" class="btn btn-icon btn-rounded btn-outline-primary" title="Screenshot"><i
-																class="feather icon-camera"></i></a>
-															<a type="button" class="btn btn-icon btn-rounded btn-outline-warning" title="Content List"><i
-																class="feather icon-layers"></i></a>
+															<a type="button" class="btn btn-rounded btn-outline-primary" title="Screenshot"><i
+																class="feather icon-download"></i>Acknowledgement</a>	
 														</td>										
 														<td>7/20/2024</td>
                                                         <td>Lagankhel <br> Balkumari <br> Airport</td>
@@ -880,10 +878,8 @@
                                                         <td><img src="assets/images/slider/img-slide-1.jpg" alt="" width="150px" class="img-fluid">		</td>
                                                         <td>Daraz</td>
                                                         <td>
-															<a type="button" class="btn btn-icon btn-rounded btn-outline-primary" title="Screenshot"><i
-																class="feather icon-camera"></i></a>
-															<a type="button" class="btn btn-icon btn-rounded btn-outline-warning" title="Content List"><i
-																class="feather icon-layers"></i></a>
+															<a type="button" class="btn btn-rounded btn-outline-primary" title="Screenshot"><i
+																class="feather icon-download"></i>Acknowledgement</a>	
 														</td>										
 														<td>6/19/2025</td>
                                                         <td>Lagankhel <br> Balkumari <br> Airport <br>Chabahil</td>
@@ -911,10 +907,8 @@
 														</td>
                                                         <td>Ultima lifestyle</td>
                                                         <td>
-															<a type="button" class="btn btn-icon btn-rounded btn-outline-primary" title="Screenshot"><i
-																class="feather icon-camera"></i></a>
-															<a type="button" class="btn btn-icon btn-rounded btn-outline-warning" title="Content List"><i
-																class="feather icon-layers"></i></a>
+															<a type="button" class="btn btn-rounded btn-outline-primary" title="Screenshot"><i
+																class="feather icon-download"></i>Acknowledgement</a>	
 														</td>										
 														<td>9/20/2024</td>
                                                         <td> Airport</td>
