--- a/addclient.html
+++ b/addclient.html
@@ -962,7 +962,54 @@
 																			<input type="text" class="form-control" name="validation-email"
 																				placeholder="Enter time allocated to client">
 																		</div>
-																	</div>																	
+																	</div>	
+																	<div class="col-md-6">
+													<div class="card">
+														<div class="card-header">
+															<h5 class="card-title">Set Ads Repetition</h5>
+														</div>
+														<div class="card-body">
+															<div class="row">
+																<div class="form-group col-md-4">																
+																	<div class="checkbox-inline">
+																		<div class="form-check form-check-inline">
+																			<input class="form-check-input input-primary" type="radio"
+																				name="group5" value="" id="customCheckinlh1">
+																			<label class="form-check-label" for="customCheckinlh1"> 10 Min
+																			</label>
+																		</div><div class="form-check form-check-inline">
+																			<input class="form-check-input input-primary" type="radio"
+																				name="group5" value="" id="customCheckinlh1">
+																			<label class="form-check-label" for="customCheckinlh1"> 15 Min
+																			</label>
+																		</div>
+																		<div class="form-check form-check-inline">
+																			<input class="form-check-input input-primary" type="radio"
+																				name="group5" value="" id="customCheckinlh2">
+																			<label class="form-check-label" for="customCheckinlh2"> 30 Min
+																			</label>
+																		</div>
+																		<div class="form-check form-check-inline">
+																			<input class="form-check-input input-primary" type="radio"
+																				name="group5" value="" id="customCheckinlh2">
+																			<label class="form-check-label" for="customCheckinlh2"> 60 Min
+																			</label>
+																		</div>    
+																	</div>
+																</div> 
+																<div class="col-md-8">
+																	<div class="form-group">
+																		<input class="form-check-input input-primary" type="radio"
+																						name="group5" value="" id="customCheckinlh2">
+																		<label class="form-label">Custom Repetitions per Hour</label>
+																		<input type="text" class="form-control" name="validation-email"
+																			placeholder="Enter No of Repeat Times in Hour">
+																	</div>
+																</div>                                                 
+															</div>														 
+														</div>														
+													</div>																									
+												</div>																
 																</div>
 															</div>															
 														</div>
