--- a/viewads.html
+++ b/viewads.html
@@ -826,6 +826,7 @@
 														<th>Preview</th>
 														<th>Client</th>
 														<th>Status</th>
+														<th>Log</th>
 														<th>Expiry Date</th>
 														<th>Ad Repetition</th>
 														<th>No of Buses</th>
@@ -843,8 +844,12 @@
                                                         <td>Coke</td>
                                                         <td>
 															<a type="button" class="btn btn-rounded btn-outline-primary" title="Screenshot"><i
-																class="feather icon-download"></i>Acknowledgement</a>	
-														</td>										
+																class="feather icon-download"></i>Ack</a>	
+														</td>	
+														<td>
+															<a type="button" class="btn btn-rounded btn-outline-success" title="Screenshot"><i
+																class="feather icon-play"></i>Play Log</a>	
+														</td>									
 														<td>7/20/2024</td>
                                                         <td>15 Min</td>
 														<td>Sajha Route 1 (10 Buses)<br>Sajha Route 2 (5 Buses)</td>
@@ -870,8 +875,12 @@
                                                         <td>Daraz</td>
                                                         <td>
 															<a type="button" class="btn btn-rounded btn-outline-primary" title="Screenshot"><i
-																class="feather icon-download"></i>Acknowledgement</a>	
-														</td>										
+																class="feather icon-download"></i>Ack</a>	
+														</td>	
+														<td>
+															<a type="button" class="btn btn-rounded btn-outline-success" title="Screenshot"><i
+																class="feather icon-play"></i>Play Log</a>	
+														</td>									
 														<td>6/19/2025</td>
                                                         <td>10 Min</td>
 														<td>Sajha Route 1 (5 Buses)<br>Ringroad 1 (15 Buses) <br>Sajha Route 4 (5 Buses) </td>
@@ -899,7 +908,11 @@
                                                         <td>Ultima lifestyle</td>
                                                         <td>
 															<a type="button" class="btn btn-rounded btn-outline-primary" title="Screenshot"><i
-																class="feather icon-download"></i>Acknowledgement</a>	
+																class="feather icon-download"></i>Ack</a>	
+														</td>
+														<td>
+															<a type="button" class="btn btn-rounded btn-outline-success" title="Screenshot"><i
+																class="feather icon-play"></i>Play Log</a>	
 														</td>										
 														<td>9/20/2024</td>
                                                         <td>30 Min</td>
