--- a/addbus.html
+++ b/addbus.html
@@ -810,7 +810,7 @@
 						<!-- [ Main Content ] start -->
 						<div class="row">							
 							 <!-- [ Form Validation ] start -->
-                            <div class="col-sm-6 col-xl-6">
+                            <div class="col-xl-9">
                                 <div class="card col-xl-12 col-sm-12">
                                     <div class="card-header">
                                         <h5>Add Bus</h5>
@@ -819,13 +819,20 @@
                                         <div class=" col-xl-12">
                                         <form id="validation-form123" action="#!">
                                             <div class="row">
-                                                <div class="col-md-12">
+                                                <div class="col-md-6">
                                                     <div class="form-group">
                                                         <label class="form-label">Bus Name</label>
                                                         <input type="text" class="form-control" name="validation-email"
                                                             placeholder="Enter Bus Name">
                                                     </div>
-                                                </div>                                                                                      
+                                                </div>   
+												<div class="col-md-6">
+                                                    <div class="form-group">
+                                                        <label class="form-label">Bus Driver No (Optional)</label>
+                                                        <input type="text" class="form-control" name="validation-email"
+                                                            placeholder="Enter Bus Name">
+                                                    </div>
+                                                </div>                                                                                   
                                                 <div class="col-md-6">
                                                     <div class="form-group">
                                                         <label class="form-label">Bus No</label>
